--- a/avatar-svelte/package.json
+++ b/avatar-svelte/package.json
@@ -2,16 +2,16 @@
   "name": "avatar-svelte",
   "version": "1.0.0",
   "main": "dist/index.js",
-  "module": "dist/index.mjs",
+  "module": "dist/index.es.js",
   "svelte": "src/index.js",
   "scripts": {
     "build": "rollup -c"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^12.0.0",
+    "@rollup/plugin-node-resolve": "^8.0.0",
     "rollup": "^2.3.4",
     "rollup-plugin-svelte": "^5.0.3",
-    "@rollup/plugin-node-resolve": "^8.0.0",
     "svelte": "^3.0.0"
   }
 }
