--- a/avatar-svelte/package.json
+++ b/avatar-svelte/package.json
@@ -5,26 +5,15 @@
   "module": "dist/index.es.js",
   "svelte": "src/index.js",
   "scripts": {
-    "build:rollup": "rollup -c",
-    "build": "cross-env NODE_ENV=production webpack"
+    "build": "rollup -c"
   },
   "devDependencies": {
-    "@babel/core": "^7.11.1",
-    "@babel/preset-env": "^7.11.0",
-    "@rollup/plugin-babel": "^5.1.0",
     "@rollup/plugin-commonjs": "^12.0.0",
     "@rollup/plugin-node-resolve": "^8.0.0",
-    "babel-loader": "^8.1.0",
-    "cross-env": "^7.0.2",
-    "css-loader": "^4.2.1",
-    "mini-css-extract-plugin": "^0.9.0",
     "rollup": "^2.3.4",
+    "rollup-plugin-livereload": "^1.0.0",
     "rollup-plugin-svelte": "^5.0.3",
-    "rollup-plugin-terser": "^7.0.0",
-    "style-loader": "^1.2.1",
-    "svelte": "^3.0.0",
-    "svelte-loader": "^2.13.6",
-    "webpack": "^4.44.1",
-    "webpack-cli": "^3.3.12"
+    "rollup-plugin-terser": "^5.1.2",
+    "svelte": "^3.0.0"
   }
 }
