--- a/avatar-svelte/package.json
+++ b/avatar-svelte/package.json
@@ -11,11 +11,17 @@
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
+    "@rollup/plugin-typescript": "^6.1.0",
+    "@tsconfig/svelte": "^1.0.10",
     "rollup": "^2.29.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
     "rollup-plugin-svelte": "^6.0.1",
     "rollup-plugin-terser": "^7.0.2",
-    "svelte": "^3.29.0"
+    "svelte": "^3.29.0",
+    "svelte-check": "^1.1.11",
+    "svelte-preprocess": "^4.5.2",
+    "tslib": "^2.0.3",
+    "typescript": "^4.0.5"
   }
 }
