--- a/avatar-svelte/package.json
+++ b/avatar-svelte/package.json
@@ -6,13 +6,19 @@
   "svelte": "src/index.js",
   "scripts": {
     "build": "rollup -c",
-    "dev": "rollup -c -w"
+    "dev": "rollup -c -w",
+    "test": "jest src",
+    "test:watch": "npm run test -- --watch"
   },
   "devDependencies": {
     "@rollup/plugin-commonjs": "^15.1.0",
     "@rollup/plugin-node-resolve": "^9.0.0",
     "@rollup/plugin-typescript": "^6.1.0",
+    "@testing-library/jest-dom": "^5.11.6",
+    "@testing-library/svelte": "^3.0.0",
     "@tsconfig/svelte": "^1.0.10",
+    "babel-jest": "^26.6.3",
+    "jest": "^26.6.3",
     "rollup": "^2.29.0",
     "rollup-plugin-livereload": "^2.0.0",
     "rollup-plugin-serve": "^1.1.0",
@@ -20,8 +26,29 @@
     "rollup-plugin-terser": "^7.0.2",
     "svelte": "^3.29.0",
     "svelte-check": "^1.1.11",
-    "svelte-preprocess": "^4.5.2",
+    "svelte-jester": "^1.1.5",
+    "svelte-preprocess": "^4.6.1",
+    "ts-jest": "^26.4.4",
     "tslib": "^2.0.3",
     "typescript": "^4.0.5"
+  },
+  "jest": {
+    "transform": {
+      "^.+\\.svelte$": [
+        "svelte-jester",
+        {
+          "preprocess": true
+        }
+      ],
+      "^.+\\.ts$": "ts-jest"
+    },
+    "moduleFileExtensions": [
+      "js",
+      "ts",
+      "svelte"
+    ],
+    "setupFilesAfterEnv": [
+      "@testing-library/jest-dom/extend-expect"
+    ]
   }
 }
